--- a/html/publicweb/contactus.html
+++ b/html/publicweb/contactus.html
@@ -35,7 +35,7 @@
             <li><a href="download.html">Download</a></li>
             <li><a href="/qa/">Support</a></li>
             <li><a href="contactus.html" class="current">About Us</a></li>
-            <li><a href="/blog/">Blog</a></li>
+            <li><a href="/qa/?qa=tag/blog-post">Blog</a></li>
         </ul></div>
         <div class="indent">
         	<a href="faq.html" class="button">FAQ's</a>
