--- a/html/publicweb/download.html
+++ b/html/publicweb/download.html
@@ -36,7 +36,7 @@
             <li><a href="download.html" class="current">Download</a></li>
             <li><a href="/qa/">Support</a></li>
             <li><a href="contactus.html">About Us</a></li>
-            <li><a href="/blog/">Blog</a></li>
+            <li><a href="/qa/?qa=tag/blog-post">Blog</a></li>
         </ul></div>
         <div class="indent">
         	<a href="faq.html" class="button">FAQ's</a>
