--- a/html/publicweb/index.html
+++ b/html/publicweb/index.html
@@ -40,7 +40,7 @@
             <li><a href="download.html">Download</a></li>
             <li><a href="/qa/">Support</a></li>
             <li><a href="contactus.html">About Us</a></li>
-            <li><a href="/blog/">Blog</a></li>
+            <li><a href="/qa/?qa=tag/blog-post">Blog</a></li>
         </ul></div>
         <div class="indent">
         	<a href="faq.html" class="button">FAQ's</a>
