--- a/html/publicweb/contactus.html
+++ b/html/publicweb/contactus.html
@@ -23,7 +23,7 @@
 <body id="page6" onload="new ElementMaxHeight(); ">
 <div class="main">
     <div id="header">
-       <div class="logo"><h1><a href="index.html">&nbsp;Helix&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
+       <div class="logo"><h1><a href="index.html">Helix SDK</a></h1>
        </div>
        <div class="callus">
        Use the source, Luke!<br/>
@@ -42,14 +42,14 @@
         	<a href="help.html" class="button">Help &nbsp;</a>
         </div>
         <div class="indent1">
-        	<div class="slogan">Open Web Development<br />
+        	<div class="slogan">Web Development SDK<br />
             	<span> &nbsp; Open Source Framework<br/>
             	       &nbsp; Unlimited Results
 	           	</span>
             </div>
             <br/>
             <span class="txt">Helix provides an SDK for building Web Applications<br />
-             with versions in Java, C++, and C#<br/>
+             with server support for Java, C++, or C#<br/>
              <br/>
              <br/>
              <br/>
