--- a/html/publicweb/download.html
+++ b/html/publicweb/download.html
@@ -24,7 +24,7 @@
 <body id="page2" onload="new ElementMaxHeight(); ">
 <div class="main">
     <div id="header">
-       <div class="logo"><h1><a href="index.html">&nbsp;Helix&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
+       <div class="logo"><h1><a href="index.html">Helix SDK</a></h1>
        </div>
        <div class="callus">
        Use the source, Luke!<br/>
@@ -43,14 +43,14 @@
         	<a href="help.html" class="button">Help &nbsp;</a>
         </div>
         <div class="indent1">
-        	<div class="slogan">Open Web Development<br />
+        	<div class="slogan">Web Development SDK<br />
             	<span> &nbsp; Open Source Framework<br/>
             	       &nbsp; Unlimited Results
 	           	</span>
             </div>
             <br/>
             <span class="txt">Helix provides an SDK for building Web Applications<br />
-             with versions in Java, C++, and C#<br/>
+             with server support for Java, C++, or C#<br/>
              <br/>
              <br/>
              <br/>
@@ -72,43 +72,31 @@
                                                 <div class="container row1">
                                                     <div class="container">
                                                         <div class="col-1">
-                                                            <h2 class="h2-1">Give us a try</h2>
+                                                            <h2 class="h2-1">Give Helix a try</h2>
                                                             <img alt="" src="images/2page_img1.jpg" class="img-indent" /><br />
-                                                            <p>Download our full featured installation so that you can explore
-                                                       			the system to your satisfaction in your own environment. 
-                                                            <a href="mailto:support@hericus.com">Send us an e-mail</a> 
-                                                            if you are having any issues with the download or the trial itself. 
+                                                            <p>It is our plan to package the Helix SDK into a single
+															download that you can install on your platform of 
+															choice.  This will install the SDK manager that will
+															help you to provision and generate the projects that
+															you will work on.  It will help you to identify the
+															language environment of your choice, and also the
+															deployment style for your project.
                                                             </p>
                                                         </div>
                                                         <div class="col-2">
-                                                            <h2>Zed Trial - 60 Days Free</h2>
-                                                            <p class="txt"><strong>Please fill out the following information
-                                                            and we will e-mail you the download information and license
-                                                            code for your free trial.</strong>
+                                                            <h2>Questions, Comments, Support</h2>
+															<p class="txt"><strong>Please use the 
+																<a href="/qa/">Q&amp;A Forums</a> to get help
+                                                            with the download and installation process.
+                                                            </strong>
                                                             </p>
-                                                            <p>Be sure that your e-mail address is correct, as that is where
-                                                            the license codes will be sent.
+															<p>We are always monitoring the <a href="/qa/">Q&amp;A Forums</a>
+															and our community of users and volunteers is second
+															to none.
                                                             </p>
-															<form name="trialinput" action="/RequestTrial" method="post">
-																<table border="0">
-																	<tr>
-																		<td>Name:</td>
-																		<td><input type="text" name="contactname" size="35" /></td>
-																	</tr>
-																	<tr>
-																		<td>Email:</td>
-																		<td><input type="text" name="contactemail" size="35" /></td>
-																	</tr>
-																	<tr>
-																		<td>Phone:</td>
-																		<td><input type="text" name="contactphone" /> (optional)</td>
-																	</tr>
-																	<tr>
-																		<td></td>
-																		<td><input type="button" value="Request Zed Trial Download" onclick="verifyTrialForm();"/></td>
-																	</tr>
-																</table>
-															</form>
+															<p>
+															Welcome on board!
+															</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -131,19 +119,34 @@
                                                 <div class="corner-bottom-left maxheight">
                                                     <div class="corner-bottom-right maxheight"> 
                                                         <div class="indent-box">
-                                                            <h2>Trial advantages</h2>
+                                                            <h2>Download Options</h2>
                                                             <ul>
-                                                                <li>60 Days To Explore The System</li>
+																<li><a href="https://github.com/smc314/helix">Download the full source</a></li>
 	                                                            <li class="last">&nbsp;</li>
-                                                                <li>Automate Your Favorite Build</li>
+
+                                                                <li>Windows 32-Bit SDK Installer</li>
 	                                                            <li class="last">&nbsp;</li>
-                                                                <li>Create Tasks &amp; Bugs</li>
+
+                                                                <li>Windows 64-Bit SDK Installer</li>
 	                                                            <li class="last">&nbsp;</li>
-                                                                <li>Verify Your System Setup </li>
+
+                                                                <li>Linux 32-Bit SDK Installer - RPM</li>
 	                                                            <li class="last">&nbsp;</li>
-                                                                <li>Work With Your Own Code </li>
+
+                                                                <li>Linux 32-Bit SDK Installer - DEB</li>
 	                                                            <li class="last">&nbsp;</li>
-                                                                <li>Include Your Team In The Eval </li>
+
+                                                                <li>Linux 32-Bit SDK Installer - tar.gz</li>
+	                                                            <li class="last">&nbsp;</li>
+
+                                                                <li>Linux 64-Bit SDK Installer - RPM</li>
+	                                                            <li class="last">&nbsp;</li>
+
+                                                                <li>Linux 64-Bit SDK Installer - DEB</li>
+	                                                            <li class="last">&nbsp;</li>
+
+                                                                <li>Linux 64-Bit SDK Installer - tar.gz</li>
+
                                                             </ul>
                                                         </div>                                     
                                                     </div>
@@ -170,21 +173,11 @@
 	                                                <div class="corner-bottom-left maxheight">
 	                                                    <div class="corner-bottom-right maxheight"> 
 	                                                        <div class="indent-box">
-	                                                            <h2>Community Edition</h2>
+	                                                            <h2>Recent Versions</h2>
 	                                                            <ul>
-	                                                                <li>Free For Small Teams</li>
+																	<li><a href="#0.0.2">0.0.2 - Source Code</a></li>
 	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Professional Quality Tools</li>
-	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Support Up To 5 Users</li>
-	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Upgrade Any Time</li>
-	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Small Businesses </li>
-	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Startup Software Companies </li>
-	                                                                <li class="last">&nbsp;</li>
-	                                                                <li>Small Development Groups </li>
+																	<li><a href="#0.0.1">0.0.1 - Source Code</a></li>
 	                                                            </ul>
 	                                                        </div>                                     
 	                                                    </div>
@@ -205,49 +198,42 @@
 	                                    <div class="corner-bottom-left maxheight">
 	                                        <div class="corner-bottom-right maxheight"> 
 	                                            <div class="indent-box1">
+
 	                                                <div class="container row1">
 	                                                    <div class="container">
 	                                                        <div class="col-1">
-	                                                            <h2>Zed Community Edition</h2>
-	                                                            <p class="txt"><strong>Please fill out the following information and
-	                                                            we will e-mail you the download information and your Community Edition
-	                                                            License. </strong></p>
-	                                                            <p>Be sure that your e-mail address is correct, as that is where
-	                                                            the license codes will be sent.
-	                                                            </p>
-																<form name="communityeditioninput" action="/RequestFreeEdition" method="post">
-																	<table border="0">
-																		<tr>
-																			<td>Name:</td>
-																			<td><input type="text" name="contactname" size="40" /></td>
-																		</tr>
-																		<tr>
-																			<td>Email:</td>
-																			<td><input type="text" name="contactemail" size="40" /></td>
-																		</tr>
-																		<tr>
-																			<td></td>
-																			<td><input type="button" value="Request Zed Community Edition" onclick="verifyCommunityForm();"/></td>
-																		</tr>
-																	</table>
-																</form>
+																<h2><a id="0.0.2">0.0.2 - Major Features Added</a></h2>
+	                                                            <ul class="bullets">
+	                                                            	<li class="bullet">Web site download page links setup</li>
+																	<li class="bullet">Blog links updated.</li>
+																</ul>
 	                                                        </div>
 	                                                        <div class="col-2">
-	                                                            <h2 class="h2-1">Join The Zed Community</h2>
-	                                                            <img alt="" src="images/3page_img1.jpg" class="img-indent" /><br />
-	                                                            <p>
-	                                                            Hericus Software is proud to offer a Free Community Edition of 
-	                                                            the Zed Builds and Bugs Manager for individuals or organizations 
-	                                                            who do not immediately require the full commercial version. 
-	                                                            This version is restricted in the following ways:
+	                                                            <h2 class="h2-1">Major Bugs Fixed</h2>
+	                                                        </div>
+	                                                    </div>
+													</div> <!-- class="container row1" -->
+
+	                                                <div class="container row1">
+	                                                    <div class="container">
+	                                                        <div class="col-1">
+																<h2><a id="0.0.1">0.0.1 - Major Features Added</a></h2>
 	                                                            <ul class="bullets">
-	                                                            	<li class="bullet">Up to 5 users may be defined in the system</li>
-																	<li class="bullet">Only 10 concurrent sessions may be active at any one time on the server</li>
-																	<li class="bullet">Remote Build step execution will still require the purchase of a satellite server license.</li>
+	                                                            	<li class="bullet">Web site download page created</li>
+																	<li class="bullet">Web site hosting site provisioned</li>
+																</ul>
+	                                                        </div>
+	                                                        <div class="col-2">
+	                                                            <h2 class="h2-1">Major Bugs Fixed</h2>
+	                                                            <ul class="bullets">
+	                                                            	<li class="bullet">Connection to MySQL</li>
+																	<li class="bullet">Layout of source tree</li>
+																	<li class="bullet">Organization of QA site.</li>
 																</ul>
 	                                                        </div>
 	                                                    </div>
-	                                                </div>
+													</div> <!-- class="container row1" -->
+
 	                                            </div>
 	                                        </div>
 	                                    </div>
