--- a/html/publicweb/index.html
+++ b/html/publicweb/index.html
@@ -28,7 +28,7 @@
 <body id="page1" onload="new ElementMaxHeight(); ">
 <div class="main">
     <div id="header">
-       <div class="logo"><h1><a href="index.html">&nbsp;Helix&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
+       <div class="logo"><h1><a href="index.html">Helix SDK</a></h1>
        </div>
        <div class="callus">
        Use the source, Luke!<br/>
