--- a/html/sdk/index.html
+++ b/html/sdk/index.html
@@ -1,13 +1,68 @@
 <html>
 	<head>
 		<title>Helix</title>
+		<!--
 		<meta http-equiv="REFRESH" content="0;url=/qd/dev/build/index.html">
+		-->
+		<style type="text/css">
+			body{
+				padding: 0px;
+				margin: 0px;
+				background-image: url('images/Helix_Cropped_1024_844.jpg');
+				background-attachment: fixed;
+				background-size: cover;
+				color: aqua;
+			}
+
+			/* This set of colors generally matches the colors in the Helix_Cropped image above, while
+			   avoiding colors that are too dark, as the background of the image is black.
+			 */
+			h1 {
+				font-size: 50px;
+				color: turquoise;
+				background: none;
+				text-align: center;
+			}
+
+			h2 {
+				font-size: 30px;
+				color: chocolate;
+				text-align: center;
+			}
+
+			h3 {
+				font-size: 20px;
+				color: burlywood;
+			}
+
+			h4 {
+				font-size: 18px;
+				color: goldenrod;
+			}
+
+			a:link {
+				color: coral;
+			}
+
+			a:visited {
+				color: turquoise;
+			}
+
+			a:hover {
+				color: turquoise;
+			}
+
+		</style>
 	</head>
 	<body>
 		<h1>Helix</h1>
+		<h2>An OpenSource MVC framework for building Web Applications using Java, C++, or C#</h2>
 		You should be automatically re-directed to the development page.  If not, please use this link:<br/>
 		<br/>
 		<a href="/qd/dev/build/index.html">Development Page --- Start Here</a>
 		<br/>
+		<h2>This is an h2 tag</h2>
+		<h3>This is an h3 tag</h3>
+		<h4>This is an h4 tag</h4>
 	</body>
 </html>
